status-page-minikube/templates/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/benami:status-page-whitenoise
        command: ["gunicorn", "--bind", "0.0.0.0:8001", "--config", "/app/contrib/gunicorn.py", "--pythonpath", "/app/statuspage", "statuspage.wsgi"]
        ports:
        - containerPort: 8001
        volumeMounts:
        - name: config
          mountPath: /app/statuspage/configuration.py
          subPath: configuration.py
      volumes:
      - name: config
        configMap:
          name: status-page-config
