status-page-minikube/templates/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/benami:status-page-whitenoise
        volumeMounts:
        - name: config
          mountPath: /app/statuspage/configuration.py
          subPath: configuration.py
      volumes:
      - name: config
        configMap:
          name: status-page-config
