status-page-minikube/templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - port: 8000
    targetPort: 8001
  type: ClusterIP
